[wip] investigando comp block/header sendo reusado entre páginas

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@arijs/vue-prerender",
   "version": "0.0.1",
   "description": "Prerender library for Vue 3",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
