--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-plugin-module-resolver": "^4.1.0"
+  },
+  "peerDependencies": {
+    "browserslist": ">=4.16.5 <5",
+    "lodash": ">=4.17.21 <5"
   }
 }
